--- a/src/main/resources/templates/admin/calculate.html
+++ b/src/main/resources/templates/admin/calculate.html
@@ -22,31 +22,27 @@
         <div class="admin_menu flex space-x-4">
           <ul class="flex space-x-4">
             <li>
-              <a th:href="@{/admin/member}" class="menu-link">회원관리</a>
+              <a class="menu-link" th:href="@{/admin/member}">회원관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/notice}" class="menu-link">공지사항 관리</a>
+              <a class="menu-link" th:href="@{/admin/notice}">공지사항 관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/domestic}" class="menu-link">국내도서 관리</a>
+              <a class="menu-link" th:href="@{/admin/domestic}">국내도서 관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/foreign}" class="menu-link">외국도서 관리</a>
+              <a class="menu-link" th:href="@{/admin/foreign}">외국도서 관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/author}" class="menu-link">작가관리</a>
+              <a class="menu-link" th:href="@{/admin/calculate}">정산관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/article}" class="menu-link">판매 글 관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/calculate}" class="menu-link">정산관리</a>
+              <a class="menu-link" th:href="@{/product/create}">제품 등록</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
-    <!-- ... -->
   </header>
   <!-- 회원 관리 테이블 -->
   <div class="w-[1580px] mx-auto mt-[100px]">
