--- a/src/main/resources/templates/member/findUsername.html
+++ b/src/main/resources/templates/member/findUsername.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>BOOKU_LUV 아이디 찾기</title>
 </head>
 <body>
@@ -29,7 +28,7 @@
                 </div>
                 <div class="flex justify-center">
                     <button type="submit" class="btn btn-primary btn-outline">아이디찾기</button>
-                    <button type="submit" class="btn btn-primary btn-outline ml-[20px]">뒤로가기</button>
+                    <a href="/member/login" class="btn btn-primary btn-outline ml-[20px]">뒤로가기</a>
                 </div>
             </form>
             <!-- 아이디 찾기 결과 출력 -->
@@ -63,7 +62,5 @@
             }
         });
     }
-
-
 </script>
 </html>
