--- a/src/main/resources/templates/admin/domestic.html
+++ b/src/main/resources/templates/admin/domestic.html
@@ -10,6 +10,25 @@
   <title>관리자 페이지</title>
   <!-- 테일윈드 스타일시트 링크 추가 -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+        .truncate-500 {
+            max-width: 500px;
+            white-space: nowrap;
+            overflow: auto;
+        }
+        .truncate-300 {
+            max-width: 300px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .truncate-400 {
+            max-width: 400px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+  </style>
 </head>
 <body>
 
@@ -21,25 +40,22 @@
         <div class="admin_menu flex space-x-4">
           <ul class="flex space-x-4">
             <li>
-              <a th:href="@{/admin/member}" class="menu-link">회원관리</a>
+              <a class="menu-link" th:href="@{/admin/member}">회원관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/notice}" class="menu-link">공지사항 관리</a>
+              <a class="menu-link" th:href="@{/admin/notice}">공지사항 관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/domestic}" class="menu-link">국내도서 관리</a>
+              <a class="menu-link" th:href="@{/admin/domestic}">국내도서 관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/foreign}" class="menu-link">외국도서 관리</a>
+              <a class="menu-link" th:href="@{/admin/foreign}">외국도서 관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/author}" class="menu-link">작가관리</a>
+              <a class="menu-link" th:href="@{/admin/calculate}">정산관리</a>
             </li>
             <li>
-              <a th:href="@{/admin/article}" class="menu-link">판매 글 관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/calculate}" class="menu-link">정산관리</a>
+              <a class="menu-link" th:href="@{/product/create}">제품 등록</a>
             </li>
           </ul>
         </div>
@@ -50,7 +66,16 @@
 
   <!-- 판매글 관리 테이블 -->
   <div class="w-[1580px] mx-auto mt-[100px]">
-    <h1 class="text-3xl font-semibold mt-8 mb-4">도서 관리</h1>
+    <h1 class="text-3xl font-semibold mt-8 mb-4">국내 도서 관리</h1>
+    <div class="search_box flex items-center justify-end my-8">
+      <select id="dropdown" class="p-2 border rounded">
+        <option value="all">제목 + 내용</option>
+        <option value="title">제목</option>
+        <option value="content">내용</option>
+      </select>
+      <input type="text" id="search_kw" class="p-2 border rounded mx-2" placeholder="검색어를 입력하세요">
+      <button type="button" id="btn_search" class="p-2 border transition duration-300 hover:bg-gray-200">검색</button>
+    </div>
     <div class="overflow-x-auto">
       <table class="min-w-full">
         <thead>
@@ -60,21 +85,125 @@
           <th class="py-2 px-4 w-auto border">작가</th>
           <th class="py-2 px-4 w-auto border">출판일</th>
           <th class="py-2 px-4 w-auto border">출판사</th>
+          <th class="py-2 px-4 w-auto border">수정</th>
+          <th class="py-2 px-4 w-auto border">삭제</th>
         </tr>
         </thead>
-        <tbody>
-        <tr class="bg-white" th:each="product : ${productList}">
-          <th class="py-2 px-4 border" th:text="${product.id}"></th>
-          <th class="py-2 px-4 border" th:text="${product.title}"></th>
-          <th class="py-2 px-4 border" th:text="${product.author}"></th>
-          <th class="py-2 px-4 border" th:text="${product.pubDate}"></th>
-          <th class="py-2 px-4 border" th:text="${product.publisher}"></th>
+        <tbody th:if="${products}">
+        <tr class="bg-white" th:each="product, loop : ${products}">
+          <td class="py-2 px-4 border">
+            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${products.getTotalElements() - (products.getNumber() * products.getSize()) - loop.index}" th:attr="data-id=${product.id}"></a>
+          </td>
+          <td class="py-2 px-4 border truncate-500">
+            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${product.title}" th:attr="data-id=${product.id}"></a>
+          </td>
+          <td class="py-2 px-4 border truncate-300">
+            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${product.author}" th:attr="data-id=${product.id}"></a>
+          </td>
+          <td class="py-2 px-4 border truncate-300">
+            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${product.pubDate}" th:attr="data-id=${product.id}"></a>
+          </td>
+          <td class="py-2 px-4 border" th:text="${product.publisher}">
+            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${product.publisher}" th:attr="data-id=${product.id}"></a>
+          </td>
+          <td class="py-2 px-4 border">
+            <!-- 수정/삭제 버튼 -->
+            <a th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}"
+               href="javascript:void(0);"
+               th:data-uri="@{/product/modify/{id}(id=${product.id})}"
+               class="text-blue-500 hover:text-blue-600 transition duration-300 mr-2"
+               onclick="confirmEdit(event)">수정</a>
+          </td>
+          <td class="py-2 px-4 border">
+            <a th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}"
+               href="javascript:void(0);"
+               th:data-uri="@{/product/delete/{id}(id=${product.id})}"
+               class="text-red-500 hover:text-red-600 transition duration-300"
+               onclick="confirmDelete(event)">삭제</a>
+          </td>
         </tr>
         </tbody>
       </table>
     </div>
   </div>
 
+  <!-- 페이지네이션 -->
+  <div th:if="${!products.isEmpty()}">
+    <div class="flex justify-center mt-4">
+      <ul class="flex list-reset border border-gray-300 rounded">
+        <li class="page-item hover:bg-gray-200"
+            th:classappend="${!products.hasPrevious()} ? 'disabled'">
+          <a class="page-link px-3 py-2 block text-center" href="javascript:void(0)"
+             th:data-page="${products.number}">
+            <span><</span>
+          </a>
+        </li>
+        <li class="page-item" th:each="page: ${#numbers.sequence(1, products.totalPages)}"
+            th:if="${page >= products.number-5 and page <= products.number+5}">
+          <a class="page-link block text-center px-3 py-2 hover:bg-gray-200"
+             href="javascript:void(0)" th:classappend="${page == products.number+1} ? 'bg-blue-300'"
+             th:data-page="${page}">
+            <span th:text="${page}"></span>
+          </a>
+        </li>
+        <li class="page-item hover:bg-gray-200" th:classappend="${!products.hasNext()} ? 'disabled'">
+          <a class="page-link px-3 py-2 block text-center" href="javascript:void(0)"
+             th:data-page="${products.number+2}">
+            <span>></span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <form id="searchForm" method="get" th:action="@{/admin/domestic}">
+    <input id="kw" name="kw" th:value="${kw}" type="hidden">
+    <input id="page" name="page" th:value="${products.number}" type="hidden">
+  </form>
+
+  <script layout:fragment="script" type="text/javascript">
+    const page_elements = document.getElementsByClassName("page-link");
+    Array.from(page_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            document.getElementById('page').value = this.dataset.page;
+            document.getElementById('searchForm').submit();
+        });
+    });
+    const btn_search = document.getElementById("btn_search");
+    btn_search.addEventListener('click', function() {
+        document.getElementById('kw').value = document.getElementById('search_kw').value;
+        document.getElementById('page').value = 1;
+        document.getElementById('searchForm').submit();
+    });
+      function confirmDelete(event) {
+        event.preventDefault();
+        if (confirm("정말로 삭제하시겠습니까?\n삭제된 도서는 되돌릴 수 없습니다.")) {
+            location.href = event.target.getAttribute("data-uri");
+            alert('삭제가 완료되었습니다.');
+        }
+    }
+    function confirmEdit(event) {
+        event.preventDefault();
+        if (confirm("정말로 수정하시겠습니까?")) {
+            location.href = event.target.getAttribute("data-uri");
+        }
+    }
+    $(document).ready(function() {
+        $(".book-link").click(function() {
+            var productId = $(this).data("id");
+            $.ajax({
+                type: "POST",
+                url: "/product/increase-hit",
+                data: { id: productId },
+                success: function(response) {
+                    if (response === "success") {
+                        window.location.href = "/product/detail/" + productId;
+                    }
+                }
+            });
+        });
+    });
+  </script>
 </main>
 </body>
 </html>
