--- a/src/main/resources/templates/member/updateProfile.html
+++ b/src/main/resources/templates/member/updateProfile.html
@@ -195,7 +195,11 @@
 
                 <!--카카오 주소검색 API-->
                 <!-- 우편번호 찾기 버튼 -->
+                <!-- 우편번호 -->
                 <div class="form-control">
+                    <label class="label" for="sample4_postcode">
+                        <span class="label-text">우편번호:</span>
+                    </label>
                     <div class="flex items-center">
                         <input class="input input-bordered" id="sample4_postcode" placeholder="우편번호" required
                                th:field="*{postalNum}" type="text">
@@ -203,7 +207,6 @@
                                class="btn btn-secondary ml-2 btn-outline">
                     </div>
                 </div>
-
 
                 <!-- 도로명주소 -->
                 <div class="form-control">
@@ -308,21 +311,21 @@
                     <input class="btn btn-primary btn-outline" type="submit" value="회원정보 수정 완료">
                 </div>
             </form>
-            <!--            &lt;!&ndash; 회원탈퇴 &ndash;&gt;-->
-            <!--            <section class="section section-profile flex-grow flex flex-col items-center justify-center">-->
-            <!--                <div class="max-w-md w-full px-2 pt-4">-->
-            <!--                    <h1 class="font-bold text-lg">-->
-            <!--                        <i class="fa-solid fa-trash-can"></i>-->
-            <!--                        회원탈퇴-->
-            <!--                    </h1>-->
-            <!--                    <form th:action="@{/member/delete}" method="post">-->
-            <!--                        <button type="submit" class="btn btn-danger">회원탈퇴</button>-->
-            <!--                    </form>-->
-            <!--                </div>-->
-            <!--            </section>-->
+<!--            &lt;!&ndash; 회원탈퇴 &ndash;&gt;-->
+<!--            <section class="section section-profile flex-grow flex flex-col items-center justify-center">-->
+<!--                <div class="max-w-md w-full px-2 pt-4">-->
+<!--                    <h1 class="font-bold text-lg">-->
+<!--                        <i class="fa-solid fa-trash-can"></i>-->
+<!--                        회원탈퇴-->
+<!--                    </h1>-->
+<!--                    <form th:action="@{/member/delete}" method="post">-->
+<!--                        <button type="submit" class="btn btn-danger">회원탈퇴</button>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--            </section>-->
             <!-- 회원탈퇴 -->
-            <section class="section section-profile mt-[50px]">
-                <div class="max-w-md w-full px-2 pt-4 flex justify-between">
+            <section class="section section-profile flex-grow flex flex-col items-center justify-center">
+                <div class="max-w-md w-full px-2 pt-4 flex items-center justify-between mt-4">
                     <h1 class="font-bold text-lg">
                         <i class="fa-solid fa-trash-can"></i>
                         회원탈퇴
